style.css
/* Navigation */
#main-navigation{
    background-color: #690300;
}

/* Chat */
.chat-message-other{
    background-color: gray;
    margin-left: -10px; /*Change to %*/
    margin-right: 50px;
}

.chat-message-other-text{
    padding-top: 5px;
    padding-bottom: 5px; /*Change to em!*/

}

.chat-message-self{
    background-color: green;
    margin-left: 50px;
    margin-right: -10px;

}

.chat-message-self-text{
    padding-top: 5px;
    padding-bottom: 5px;
}



/* Code from Bootstrap Bare template (this was originally provided inline on the index.html page, move it here for readability)*/
body {
    padding-top: 54px;
}
      
@media (min-width: 992px) {
    body {
        padding-top: 56px;
    }
}

